Styled error pages

--- a/src/SFA.DAS.ProviderRelationships.Web/404.html
+++ b/src/SFA.DAS.ProviderRelationships.Web/404.html
@@ -1,11 +1,27 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Page not found</title>
     </head>
     <body>
-        <h1>Page not found</h1>
-        <p>If you entered a web address, check that it's correct. Or you can <a href="/">return to the homepage</a>.</p>
+        <div class="govuk-width-container">
+            <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
+                <div class="govuk-grid-row">
+                    <div class="govuk-grid-column-two-thirds">
+                        <h1 class="govuk-heading-xl">Page not found</h1>
+                        <p class="govuk-body">
+                            If you typed the web address, check it is correct.
+                        </p>
+                        <p class="govuk-body">
+                            If you pasted the web address, check you copied the entire address.
+                        </p>
+                        <p class="govuk-body">
+                            If the web address is correct or you selected a link or button you can <a href="/">return to the homepage</a>.
+                        </p>
+                    </div>
+                </div>
+            </main>
+        </div>
     </body>
 </html>
