--- a/src/SFA.DAS.ProviderRelationships.Web/403.html
+++ b/src/SFA.DAS.ProviderRelationships.Web/403.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Access denied</title>
+        <title>Access denied<title>
     </head>
     <body>
-        <h1>Access denied</h1>
-        <p>Your account does not have sufficient privileges.</p>
+        <div class="govuk-width-container">
+            <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
+                <div class="govuk-grid-row">
+                    <div class="govuk-grid-column-two-thirds">
+                        <h1 class="govuk-heading-xl">Access denied</h1>
+                        <p class="govuk-body">
+                            Your account does not have sufficient privileges.
+                        </p>
+                    </div>
+                </div>
+            </main>
+        </div>
     </body>
 </html>
