--- a/src/SFA.DAS.ProviderRelationships.Web/Error.html
+++ b/src/SFA.DAS.ProviderRelationships.Web/Error.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+    <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Error</title>
+        <title>Error<title>
     </head>
     <body>
-        <h1>There's been an error</h1>
-        <p>Sorry, there seems to be an error with this page. Please refresh your browser or <a href="/">go back to the homepage</a>.</p>
+        <div class="govuk-width-container">
+            <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
+                <div class="govuk-grid-row">
+                    <div class="govuk-grid-column-two-thirds">
+                        <h1 class="govuk-heading-xl">There's been an error</h1>
+                        <p class="govuk-body">
+                            Sorry, there seems to be an error with this page. Please refresh your browser or <a href="/">go back to the homepage</a>.
+                        </p>
+                    </div>
+                </div>
+            </main>
+        </div>
     </body>
 </html>
