--- a/src/SFA.DAS.ProviderRelationships.Web/Content/htm/404.html
+++ b/src/SFA.DAS.ProviderRelationships.Web/Content/htm/404.html
@@ -75,12 +75,12 @@
                         <h2 class="govuk-visually-hidden">Support links</h2>
                         <ul class="govuk-footer__inline-list">
                             <li class="govuk-footer__inline-list-item">
-                                <a class="govuk-footer__link" href="https://www.surveymonkey.co.uk/r/2JPLQ9T">
+                                <a class="govuk-footer__link" href="https://www.smartsurvey.co.uk/s/apprenticeshipservicefeedback/">
                                     Feedback
                                 </a>
                             </li>
                             <li class="govuk-footer__inline-list-item">
-                                Built by the <a href="http://gov.uk/sfa" target="_blank" class="govuk-footer__link">Education and Skills Funding Agency</a>
+                                Built by the <a href="http://gov.uk/esfa" target="_blank" class="govuk-footer__link">Education and Skills Funding Agency</a>
                             </li>
                         </ul>
                         <svg role="presentation" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 483.2 195.7" height="17" width="41">
